--- a/GDemo/app/src/main/res/layout/gif_item.xml
+++ b/GDemo/app/src/main/res/layout/gif_item.xml
@@ -1,29 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.fantasy.coolgif.widget.GIfSingleView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:fresco="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-
-    <com.fantasy.coolgif.widget.PinchImageView
-        android:id="@+id/img"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+   >
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="250dip"
-        android:background="#F4F4f4"
-        android:scaleType="centerCrop" />
+        app:cardCornerRadius="3dip"
+        app:cardElevation="2dip"
+        app:cardBackgroundColor="#FCFCFC"
+        android:layout_marginLeft="15dip"
+        android:layout_marginRight="15dip"
+        android:layout_marginBottom="15dip"
+        app:cardMaxElevation="@dimen/cardview_default_elevation"
+        android:layout_height="wrap_content">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            >
+
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#9B9B9B">
+
+                <com.fantasy.coolgif.widget.PinchImageView
+                    android:id="@+id/img"
+                    android:layout_width="match_parent"
+                    android:layout_height="220dip"
+                    android:scaleType="center" />
+
+            </FrameLayout>
 
 
-    <TextView
-        android:id="@+id/gif_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dip"
-        android:textColor="#88000000"
-        android:textSize="18dip"
+            <TextView
+                android:id="@+id/gif_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dip"
+                android:layout_marginBottom="10dip"
+                android:layout_marginLeft="10dip"
+                android:layout_marginRight="10dip"
+                android:textColor="#000000"
+                android:fontFamily="sans-serif"
+                android:textSize="15dip"
+
+                />
 
 
-        />
+        </LinearLayout>
 
+
+    </android.support.v7.widget.CardView>
 
 
 </com.fantasy.coolgif.widget.GIfSingleView>
