--- a/GDemo/app/src/main/res/layout/content_main.xml
+++ b/GDemo/app/src/main/res/layout/content_main.xml
@@ -6,14 +6,31 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.fantasy.coolgif.MainActivity"
-    android:background="#5FDA9B"
+    android:background="@color/colorPrimaryDark"
     tools:showIn="@layout/activity_main">
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:id="@+id/title"
+
+        android:layout_height="45dip">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:textSize="20dip"
+            android:textColor="@android:color/white"
+            android:text="@string/app_name"
+            />
+
+    </FrameLayout>
 
     <android.support.v4.view.ViewPager
         android:id="@+id/list"
         android:layout_width="match_parent"
-        android:layout_marginLeft="15dip"
-        android:layout_marginRight="15dip"
+        android:layout_marginBottom="20dip"
+        android:layout_below="@id/title"
         android:layout_height="match_parent">
 
     </android.support.v4.view.ViewPager>
