--- a/GDemo/app/src/main/res/values/colors.xml
+++ b/GDemo/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#60146F</color>
-    <color name="colorPrimaryDark">#746CDD</color>
+    <color name="colorPrimaryDark">#4B6B79</color>
     <color name="colorAccent">#FF4081</color>
 </resources>
