--- a/GDemo/app/src/main/res/layout/recycler_main.xml
+++ b/GDemo/app/src/main/res/layout/recycler_main.xml
@@ -1,21 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:background="@color/colorPrimaryDark"
-    android:layout_height="match_parent">
+    android:orientation="vertical">
+
     <FrameLayout
-        android:layout_width="match_parent"
         android:id="@+id/title"
+        android:layout_width="match_parent"
         android:layout_height="30dip">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:textSize="18dip"
-            android:textColor="@android:color/white"
             android:text="@string/app_name"
-            />
+            android:textColor="@android:color/white"
+            android:textSize="18dip" />
+
+        <ImageView
+            android:id="@+id/setting"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right|center_vertical"
+            android:layout_marginRight="10dip"
+            android:src="@drawable/setting_icon" />
 
     </FrameLayout>
 
