--- a/GDemo/app/src/main/res/layout/recycler_main.xml
+++ b/GDemo/app/src/main/res/layout/recycler_main.xml
@@ -11,6 +11,7 @@
         android:layout_height="30dip">
 
         <TextView
+            android:id="@+id/title_string"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
