--- a/GDemo/app/src/main/res/layout/gif_item_wrap_content.xml
+++ b/GDemo/app/src/main/res/layout/gif_item_wrap_content.xml
@@ -40,8 +40,7 @@
                     android:layout_height="wrap_content"
                     android:src="@drawable/full_screen"
                     android:layout_gravity="right|bottom"
-                    android:paddingBottom="10dip"
-                    android:paddingRight="10dip"
+                    android:padding="10dip"
                     />
 
                 <ImageView
