--- a/GDemo/app/src/main/res/values/colors.xml
+++ b/GDemo/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#4B6B79</color>
     <color name="colorPrimaryDark">#4B6B79</color>
     <color name="colorAccent">#4B6B79</color>
+    <color name="title_color">#4B6B79</color>
+    <color name="tab_text_normal_color">#B9B9B9</color>
 </resources>
